--- a/app/src/main/res/values-ja-rJP/strings.xml
+++ b/app/src/main/res/values-ja-rJP/strings.xml
@@ -2,15 +2,15 @@
 <resources>
 
     //色
-    <string name="coloraccent">#03DAC5</string>
-    <string name="primarydark">#3700B3</string>
-    <string name="lightgray">#808080</string>
+    <string name="colorAccent">#03DAC5</string>
+    <string name="primaryDark">#3700B3</string>
+    <string name="lightGray">#808080</string>
     <string name="black">#000000</string>
     <string name="red">#FF0000</string>
     <string name="yellow">#FFFF00</string>
     <string name="white">#FFFFFF</string>
 
-    <string-array name="linecolorlist">
+    <string-array name="lineColorList">
         <item>デフォルト</item>
         <item>赤色</item>
         <item>オレンジ</item>
@@ -30,7 +30,7 @@
         <item>黒色</item>
     </string-array>
 
-    <string-array name="linecolorvalue">
+    <string-array name="lineColorValue">
         <item>#03DAC5</item>
         <item>#FF0000</item>
         <item>#F68B1E</item>
@@ -59,38 +59,107 @@
     <string name="yes">はい</string>
     <string name="no">いいえ</string>
 
-
-    //メインアクティビティ
-    <string name="app_name">マイ乗換ルートメーカー</string>
-    <string name="switchback">帰宅</string>
-    <string name="switchgo">外出</string>
-    <string name="timestart">開始</string>
-    <string name="timestop">停止</string>
-    <string name="currentdate">0000/00/00 (月)</string>
-    <string name="currenttime">00:00:00</string>
-    <string name="testtext">0000</string>
-
-    //メインフラグメント
-    <string name="nexttime">00:00</string>
+    //MainActivity
+    <string name="appName">マイ乗換ルートメーカー</string>
+    <string name="switchBack">帰宅</string>
+    <string name="switchGo">外出</string>
+    <string name="timeStart">開始</string>
+    <string name="timeStop">停止</string>
+    <string name="nextTime">00:00</string>
     <string name="office">オフィス</string>
     <string name="home">自宅</string>
-    <string name="depsta1">乗車駅1</string>
-    <string name="arrsta1">降車駅1</string>
-    <string name="depsta2">乗車駅2</string>
-    <string name="arrsta2">降車駅2</string>
-    <string name="depsta3">乗車駅3</string>
-    <string name="arrsta3">降車駅3</string>
-    <string name="line1">路線1</string>
-    <string name="line2">路線2</string>
-    <string name="line3">路線3</string>
 
-    //時刻表
-    <string name="timetabletitle">時刻表</string>
-    <string name="xxxstation">〇〇〇駅</string>
-    <string name="yyylineforzzzstation">(◇◇◇線　△△△駅方面)</string>
+    //Settings
+    <string name="settingsTitle">設定</string>
+    <string name="variousSettings">各種設定</string>
+    <string name="settingsChangeLineTitle">乗換回数の設定</string>
+    <string name="back1Route">帰宅ルート1 </string>
+    <string name="back2Route">帰宅ルート2</string>
+    <string name="go1Route">外出ルート1</string>
+    <string name="go2Route">外出ルート2</string>
+    <string name="displayRoute2Title">ルート2の表示</string>
+    <string name="about">このアプリについて</string>
+    <string name="privacyPolicy">利用規約・プライバシーポリシー</string>
+    <string name="privacyPolicyAgree"><u>利用規約・プライバシーポリシー</u>\nを確認しました</string>
+    <string name="privacyPolicyUrl">https://nakajimamasao-appstudio.web.app/terms/ja/</string>
+    <string name="version">バージョン</string>
+    <string name="settingsMethod">アプリの設定方法</string>
+    <string name="linkCollection">時刻表リンク集</string>
+    <string name="notSet">未設定</string>
+    <string name="zero">なし</string>
+    <string name="once">1回</string>
+    <string name="twice">2回</string>
+    <string-array name="changeLineList">
+        <item>なし</item>
+        <item>1回</item>
+        <item>2回</item>
+    </string-array>
+    <string-array name="changeLineValue">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
+
+    //駅名設定
+    <string name="settingStationTitle">駅名の設定</string>
+    <string name="settingStationName">駅名の設定：</string>
+    <string name="settingDepartPointTitle">出発地名の設定</string>
+    <string name="settingDestinationTitle">目的地名の設定</string>
+    <string name="departStation">乗車駅</string>
+    <string name="arriveStation">降車駅</string>
+    <string name="depSta">乗車駅</string>
+    <string name="arrSta">降車駅</string>
+    <string name="departurePoint">出発地</string>
+    <string name="destination">目的地</string>
+    <string name="departStation1">乗車駅1</string>
+    <string name="arriveStation1">降車駅1</string>
+    <string name="departStation2">乗車駅2</string>
+    <string name="arriveStation2">降車駅2</string>
+    <string name="departStation3">乗車駅3</string>
+    <string name="arriveStation3">降車駅3</string>
+    <string name="character10Hint">全角10文字以内で入力します</string>
+
+    //路線情報の設定
+    <string name="settingLineNameTitle">路線名の設定</string>
+    <string name="settingLineName">路線名の設定：</string>
+    <string name="settingLineColorButton">路線カラーの設定</string>
+    <string name="settingLineColorTitle">路線カラーの設定</string>
+    <string name="settingRideTimeTitle">乗車時間の設定</string>
+    <string name="settingRideTime">乗車時間の設定 [分]：</string>
+    <string name="settingTimetable">時刻表の設定：</string>
+    <string name="line">路線</string>
+    <string name="minutes2Hint">0~99［分］を入力します</string>
+    <string name="minutesUnit">[分]</string>
+
+    //移動手段の設定
+    <string name="settingTransportationTitle">移動手段の設定</string>
+    <string name="settingTransportation">移動手段の設定 :</string>
+    <string name="settingTransitTimeTitle">乗換時間の設定</string>
+    <string name="settingTransitTime">乗換時間の設定 [分] :</string>
+    <string name="fromDeparturePoint">出発地から</string>
+    <string name="fromDestination">目的地から</string>
+    <string name="fromArriveStation1">降車駅1から</string>
+    <string name="fromArriveStation2">降車駅2から</string>
+    <string name="toDeparturePoint">出発地へ</string>
+    <string name="toDestination">目的地へ</string>
+    <string name="from"> </string>
+    <string name="to"> </string>
+    <string name="he">へ</string>
+    <string name="kara">から</string>
+    <string name="walking">徒歩</string>
+    <string name="bicycle">自転車</string>
+    <string name="car">車</string>
+    <string-array name="transportationList">
+        <item>徒歩</item>
+        <item>自転車</item>
+        <item>車</item>
+    </string-array>
+
+    //Timetable
+    <string name="timetableTitle">時刻表設定</string>
     <string name="weekday">平日</string>
     <string name="weekend">土日</string>
-    <string name="hourunit">時</string>
+    <string name="hourUnit">時</string>
     <string name="hour04">4</string>
     <string name="hour05">5</string>
     <string name="hour06">6</string>
@@ -113,127 +182,25 @@
     <string name="hour23">23</string>
     <string name="hour24">24</string>
     <string name="hour25">25</string>
-    <string name="inputtime">発車時刻の追加・削除</string>
-    <string name="inputtimehint">　0~59［分］を入力します</string>
-    <string name="copytime">発車時刻のコピー</string>
-    <string name="copyalltime">全ての時刻をコピーしますか?</string>
-
-    //設定
-    <string name="settingtitle">設定</string>
-    <string name="settingchangelinetitle">乗換回数の設定</string>
-    <string name="changelinesettingtitle">乗換回数</string>
-    <string name="back1changelinesettingtitle">帰宅ルート1の乗換回数</string>
-    <string name="back2changelinesettingtitle">帰宅ルート2の乗換回数</string>
-    <string name="go1changelinesettingtitle">外出ルート1の乗換回数</string>
-    <string name="go2changelinesettingtitle">外出ルート2の乗換回数</string>
-    <string name="routehome1">帰宅ルート1 </string>
-    <string name="routehome2">帰宅ルート2</string>
-    <string name="outgoingroute1">外出ルート1</string>
-    <string name="outgoingroute2">外出ルート2</string>
-    <string name="root2displaytitle">ルート2の表示</string>
-    <string name="varioussettingtitle">各種設定</string>
-    <string name="information">このアプリについて</string>
-    <string name="privacypolicy">利用規約・プライバシーポリシー</string>
-    <string name="privacypolicyagree"><u>利用規約・プライバシーポリシー</u>\nを確認しました</string>
-    <string name="privacypolicyurl">https://nakajimamasao-appstudio.web.app/ja/privacypolicy.html</string>
-    <string name="version">バージョン</string>
-    <string name="settingmethod">アプリの設定方法</string>
-    <string name="linkcollection">時刻表リンク集</string>
-    <string name="one.zero.zero">1.0.0</string>
-    <string name="notset">未設定</string>
-    <string name="zero">なし</string>
-    <string name="once">1回</string>
-    <string name="twice">2回</string>
-    <string-array name="changelinelist">
-        <item>なし</item>
-        <item>1回</item>
-        <item>2回</item>
-    </string-array>
-    <string-array name="changelinevalue">
-        <item>0</item>
-        <item>1</item>
-        <item>2</item>
-    </string-array>
-
-    //各種設定
-    <string name="varioussettings">各種設定 :</string>
-    <string name="back1route">帰宅ルート1</string>
-    <string name="go1route">外出ルート1</string>
-    <string name="back2route">帰宅ルート2</string>
-    <string name="go2route">外出ルート2</string>
-
-    //駅名設定
-    <string name="stationsettingtitle">駅名の設定</string>
-    <string name="settingstationnametitle">駅名の設定：</string>
-    <string name="settingdepartplacetitle">出発地名の設定</string>
-    <string name="settingdestinationtitle">目的地名の設定</string>
-    <string name="departstation">乗車駅</string>
-    <string name="arrivestation">降車駅</string>
-    <string name="depsta">乗車駅</string>
-    <string name="arrsta">降車駅</string>
-    <string name="departurepoint">出発地</string>
-    <string name="destination">目的地</string>
-    <string name="departstation1">乗車駅1</string>
-    <string name="arrivestation1">降車駅1</string>
-    <string name="departstation2">乗車駅2</string>
-    <string name="arrivestation2">降車駅2</string>
-    <string name="departstation3">乗車駅3</string>
-    <string name="arrivestation3">降車駅3</string>
-    <string name="character10hint">全角10文字以内で入力します</string>
-
-    //路線情報の設定
-    <string name="linenamesettingtitle">路線名の設定</string>
-    <string name="settinglinenametitle">路線名の設定：</string>
-    <string name="settinglinecolorbutton">路線カラーの設定</string>
-    <string name="settinglinecolortitle">路線カラーの設定</string>
-    <string name="ridetimesettingtitle">乗車時間の設定</string>
-    <string name="settingridetimetitle">乗車時間の設定 [分]：</string>
-    <string name="settingtimetabletitle">時刻表の設定：</string>
-    <string name="line">路線</string>
-    <string name="minite2hint">0~99［分］を入力します</string>
-    <string name="minutesunit">[分]</string>
-
-    //移動手段の設定
-    <string name="transportationsettingtitle">移動手段の設定</string>
-    <string name="settingtransportationtitle">移動手段の設定 :</string>
-    <string name="transittimesettingtitle">乗換時間の設定</string>
-    <string name="settingtransittimetitle">乗換時間の設定 [分] :</string>
-    <string name="fromdeparturepoint">出発地から</string>
-    <string name="fromdestination">目的地から</string>
-    <string name="fromarrivestation1">降車駅1から</string>
-    <string name="fromarrivestation2">降車駅2から</string>
-    <string name="todeparturepoint">出発地へ</string>
-    <string name="todestination">目的地へ</string>
-    <string name="from"> </string>
-    <string name="to"> </string>
-    <string name="he">へ</string>
-    <string name="kara">から</string>
-    <string name="walking">徒歩</string>
-    <string name="bicycle">自転車</string>
-    <string name="car">車</string>
-    <string-array name="transportationlist">
-        <item>徒歩</item>
-        <item>自転車</item>
-        <item>車</item>
-    </string-array>
-
-    //時刻表の設定
-    <string name="timetablesetting">時刻表の設定</string>
-    <string name="koron">:</string>
+    <string name="inputTime">発車時刻の追加・削除</string>
+    <string name="inputTimeHint">　0~59［分］を入力します</string>
+    <string name="copyTime">発車時刻のコピー</string>
+    <string name="copyAllTime">全ての時刻をコピーしますか?</string>
+    <string name="colon">:</string>
     <string name="houmen">方面</string>
     <string name="jidai">時台</string>
-    <string name="otherrouteline">別ルートの路線</string>
-    <string name="picturebutton">時刻表写真の選択表示</string>
-    <string name="timetablehint">0～59[分]を入力：半角スペース区切り</string>
+    <string name="routeOtherLine">別ルートの路線</string>
+    <string name="pictureButton">時刻表写真の選択表示</string>
+    <string name="settingTimetableHint">0～59[分]を入力：半角スペース区切り</string>
 
     //FirebaseAuth
     <string name="account">アカウント</string>
     <string name="email">Eメールアドレス</string>
     <string name="password">パスワード</string>
-    <string name="confirmpassword">確認用パスワード</string>
+    <string name="confirm_password">確認用パスワード</string>
     <string name="hint_email">Eメールアドレスを入力してください</string>
     <string name="hint_password">パスワードを入力してください</string>
-    <string name="hint_confirmpassword">確認用パスワードを入力してください</string>
+    <string name="hint_confirm_password">確認用パスワードを入力してください</string>
 
     //Login
     <string name="login">ログイン</string>
@@ -248,7 +215,7 @@
     <string name="signup_successfully">アカウント登録完了</string>
     <string name="signup_error">アカウント登録エラー</string>
     <string name="send_auth_mail_error">認証メール送信エラー</string>
-    <string name="send_authmail">認証用メールを送信しますか？</string>
+    <string name="send_auth_mail">認証用メールを送信しますか？</string>
     <string name="send_auth_mail_successfully">認証メールの送信成功</string>
     <string name="send_auth_mail_unsuccessfully">認証メールの送信失敗</string>
 
@@ -257,7 +224,7 @@
     <string name="incorrect_password">パスワードが正しくありません</string>
     <string name="incorrect_email_or_password">メールアドレスまたはパスワードが正しくありません</string>
     <string name="incorrect_email_format">メールアドレスの形式が正しくありません</string>
-    <string name="confirmpassword_not_match">確認用パスワードが一致しません</string>
+    <string name="confirm_password_not_match">確認用パスワードが一致しません</string>
 
     //Auth Error
     <string name="email_not_registered">このメールアドレスは登録されていません</string>
